cupt (2.6.0~) UNRELEASED; urgency=low

  * console:
    - Managing packages:
      - The option 'cupt::resolver::track-reasons' does not correspond to the
        console '--show-reasons' option anymore.
      - New positional action override options '--markauto', '--unmarkauto'.
      - 'markauto', 'unmarkauto': are now first-class management commands.
      - Action preview prompt: now properly show reinstalled packages as
        reinstalled, not as upgraded.
      - Action preview prompt: removed the 'one expression per line'
        limitation while processing 'a' choice.
      - Action preview prompt: new choice 'rc' ("show reason chain").
      - The option 'cupt::console::actions-preview::show-summary' got a new 
        value variant "auto".
    - 'shell':
      - Don't rebuild the cache uselessly when a package management action
        was suggested but not confirmed by user.
    - New 'functional selectors' syntax for advanced version selection. 
    - 'search':
      - New option '--fse'.
    - 'tar-metadata':
      - Include also signatures of Release files.
  * lib:
    - Removed deprecated functions 'fatal', 'warn', 'debug', 'simulate'.
    - [API break] '__': now returns 'const char*' instead of 'string'.
    - cache:
      - [API break] Pointers to Package and Version objects are now persistent
        and unique. Thus shared pointers to those objects are no more used in
        public interfaces.
      - [API break] PinnedVersion: removed explicit constructor.
      - [API break] Removed deprecated methods and structures.
      - [API break] Constructor: removed the argument
        'packageNameGlobsToReinstall' as not needed anymore.
      - [API break] 'getLocalizedDescriptions' is replaced with
        'getLocalizedDescription'.
      - [API break] 'getPolicyVersion' is renamed to 'getPreferredVersion'.
      - New possibility to use index-of-index files to speed up building
        the package cache.